--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -35,4 +35,4 @@ jobs:
        run : echo "Hello world from Deploy job"
 
      - name: Printing DEPLOYMENT package
-       run : echo "DEPLOY package name is ${{ env.DEPLOY_PACKAGE_NAME }}
+       run : echo "DEPLOY package name is ${{ env.DEPLOY_PACKAGE_NAME }}"
