--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -29,6 +29,12 @@ jobs:
     - name: List current folder
       run : ls -la
 
+    - name: Git clone my repo
+      uses: actions/checkout@v1
+    
+    - name: List current folder
+      run : ls -la
+      
   my_deploy:
     runs-on: ubuntu-latest
     needs: [my_testing]
@@ -39,3 +45,9 @@ jobs:
 
      - name: Printing DEPLOYMENT package
        run : echo "DEPLOY package name is ${{ env.DEPLOY_PACKAGE_NAME }}"
+       
+     - name: Lets test some packages iof the here 1
+       run : aws --version
+       
+     - name: Lets test some packages iof the here 2
+       run : zip
