--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -38,10 +38,21 @@ jobs:
   my_deploy:
     runs-on: ubuntu-latest
     needs: [my_testing]
-   
+    env:
+      VAR1 : "This is Job Level Variable1"
+      VAR2 : "This is Job Level Variable2"
+      
     steps:
      - name: Print HELLO Message IN DEPLOY
        run : echo "Hello world from Deploy job"
+     
+     - name: Print env vars
+       run : |
+         echo "VAR1 = ${{ env.VAR1}}"
+         echo "VAR2 = ${{ env.VAR2}}"
+         echo "VAR3 = $LOCAL_VAR"
+       env:
+         LOCAL_VAR: "THIS is super local Environment variable"
 
      - name: Printing DEPLOYMENT package
        run : echo "DEPLOY package name is ${{ env.DEPLOY_PACKAGE_NAME }}"
