--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   my_testing:
-    runs-on: ubuntu-latestдалывтлоа
+    runs-on: ubuntu-latestдjhsabdjkhasbjhda
   
     steps:
     - name: Print HELLO Message in TESTING
